--- a/sdf_asp_net/sdf_asp_net.csproj
+++ b/sdf_asp_net/sdf_asp_net.csproj
@@ -404,8 +404,8 @@
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Account\EmailConfirmed.cshtml" />
     <Content Include="Views\Account\Confirm.cshtml" />
-    <Content Include="Views\Project\Chat.cshtml" />
     <Content Include="Views\Shared\_Layout2.cshtml" />
+    <Content Include="Views\Project\_Chat.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
