Added feature to respond to messageboard entries and adapted the interface to this feature

--- a/sdf_asp_net/sdf_asp_net.csproj
+++ b/sdf_asp_net/sdf_asp_net.csproj
@@ -219,6 +219,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\MockUpService.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\MessageReplyModel.cs" />
     <Compile Include="ViewModels\MessageViewModel.cs" />
     <Compile Include="ViewModels\ProjectViewModel.cs" />
   </ItemGroup>
