--- a/sdf_asp_net/Web.config
+++ b/sdf_asp_net/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-sdf_asp_net-20181114091107.mdf;Initial Catalog=aspnet-sdf_asp_net-20181114091107;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="MyCalendarEntities" connectionString="metadata=res://*/MyCalendarDBM.csdl|res://*/MyCalendarDBM.ssdl|res://*/MyCalendarDBM.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\MyCalendar.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
