--- a/sdf_asp_net/sdf_asp_net.csproj
+++ b/sdf_asp_net/sdf_asp_net.csproj
@@ -231,6 +231,7 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\CSS\ChatSheet.css" />
     <Content Include="Content\CSS\Profile.css" />
     <Content Include="Content\CSS\StyleSheet.css" />
     <Content Include="favicon.ico" />
