--- a/sdf_asp_net/sdf_asp_net.csproj
+++ b/sdf_asp_net/sdf_asp_net.csproj
@@ -245,10 +245,6 @@
     <Compile Include="ViewModels\ProjectViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\MyCalendar.mdf" />
-    <Content Include="App_Data\MyCalendar_log.ldf">
-      <DependentUpon>MyCalendar.mdf</DependentUpon>
-    </Content>
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-lumen.css" />
@@ -892,7 +888,9 @@
     <Content Include="Views\Shared\_Chat.cshtml" />
     <Content Include="Views\Home\MyCalendar.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="App_Data\" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
